# VTX_works

10. Equity/work/fundamentals_model/20260711_ファンダメモデルの検討/: README.md  pyproject.toml  requirements.txt
10. Equity/work/fundamentals_model/20260711_ファンダメモデルの検討/config/: config.example.yaml  model_config.py
10. Equity/work/fundamentals_model/20260711_ファンダメモデルの検討/data/input/: factor_master.xlsx  factors_and_returns.xlsx  futures_returns.xlsx  index_constituents.xlsx  (+1 more)
10. Equity/work/fundamentals_model/20260711_ファンダメモデルの検討/docs/: data_dictionary.md  factor_master_guide.md  methodology.md  output_management.md  representative_universe.md
10. Equity/work/fundamentals_model/20260711_ファンダメモデルの検討/outputs/: analysis_summary.xlsx  index_input_coverage.csv
10. Equity/work/fundamentals_model/20260711_ファンダメモデルの検討/scripts/: generate_demo_data.py  run_pipeline.py
10. Equity/work/fundamentals_model/20260711_ファンダメモデルの検討/tests/: test_aggregation.py  test_factor_master.py  test_model_selection.py  test_preprocessing.py  test_reporting.py  test_risk.py  test_selection.py
10. Equity/work/fundamentals_model/20260715_ファンダメンタルズの検討②/: README.md  individual_stock_scoring_analysis_plan.pptx  pyproject.toml  requirements.txt  run_binscatter.bat  run_scoring.bat
10. Equity/work/fundamentals_model/20260715_ファンダメンタルズの検討②/config/: model_config.py
10. Equity/work/fundamentals_model/20260715_ファンダメンタルズの検討②/docs/: config_guide.md  data_dictionary.md  derived_factor_features.md  factor_master_excel_creation_instructions.txt  factor_master_guide.md  factor_master_reference.md  file_inventory.md  input_generation_readme.md  methodology.md  model_logic_and_analysis_flow.md  model_selection.md  output_management.md
10. Equity/work/fundamentals_model/20260715_ファンダメンタルズの検討②/outputs/: analysis_summary.xlsx  file_inventory.xlsx
10. Equity/work/fundamentals_model/20260715_ファンダメンタルズの検討②/scripts/: generate_demo_data.py  run_pipeline.py
10. Equity/work/fundamentals_model/20260715_ファンダメンタルズの検討②/tests/: test_factor_master.py  test_feature_engineering.py  test_model_selection.py  test_preprocessing.py  test_reporting.py  test_scenario_outputs.py
(+349 files in other folders)
